add wiji's data

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 
     </head>
     <body>
-    
+        <div>
+            <h2>Data Diri Anggota 1</h2>
+            <h3>Nama : Wiji Kurniawan</h3>
+            <h3>Domisili : Palembang</h3>
+        </div>
+
     </body>
 </html>
