--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <html>
     <head>
-
+        
     </head>
     <body>
         <div>
             <h2>Data Diri Anggota 1</h2>
             <h3>Nama : Wiji Kurniawan</h3>
             <h3>Domisili : Palembang</h3>
+        </div>
+
+        <div>
+            <h2>Data Diri Anggota 2</h2>
+            <h3>Nama : Fadhlillah Nadhil Hashfi</h3>
+            <h3>Domisili : Jakarta</h3>
         </div>
 
     </body>
