--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
             <h3>Nama : Fadhlillah Nadhil Hashfi</h3>
             <h3>Domisili : Jakarta</h3>
         </div>
+        <div>
+            <h2>Data Diri Anggota</h2>
+            <h3>Nama : Rinda Faiz Shabira</h3>
+            <h3>Domisili : Malang</h3>
+        </div>
 
     </body>
 </html>
